# bits

./: Cargo.toml  config.example.toml
src/: branches.rs  config.rs  git.rs  main.rs  open.rs  term_colors.rs
src/git/: git_ref.rs  mod.rs
