[package]
name = "bits"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.47"
dirs = "6.0.0"
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["std"] }
prettytable-rs = "0.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"
